--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/highschool}
+spring.datasource.url=${DB_URL:jdbc:postgresql://containers-us-west-111.railway.app:6064/railway}
 spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:12345}
+spring.datasource.password=${DB_PASSWORD:qxpf2hlJOBnjqRqWWH9B}
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
